// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`comments.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import type A = require("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
const A = require("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

import type B = require(
// Comment
"./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
const B = require(
// Comment
"./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

=====================================output=====================================
import type A = require("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");
const A = require("./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

import type B = require(
  // Comment
  "./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module",
);
const B = require(// Comment
"./a/long/long/long/long/long/long/long/long/long/long/long/long/path/to/module");

================================================================================
`;

exports[`import-require.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import { IModel } from 'vs/editor/common/editorCommon';
import JSONContributionRegistry = require('vs/platform/jsonschemas/common/jsonContributionRegistry');

=====================================output=====================================
import { IModel } from "vs/editor/common/editorCommon";
import JSONContributionRegistry = require("vs/platform/jsonschemas/common/jsonContributionRegistry");

================================================================================
`;

exports[`type-imports.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
import type A = require("foo");
export import type = require("A");

import type
A = require("A");

import
type
a = require("a");

export import
type
B = require("B");

export
import
type
b = require("b");

=====================================output=====================================
import type A = require("foo");
export import type = require("A");

import type A = require("A");

import type a = require("a");

export import type B = require("B");

export import type b = require("b");

================================================================================
`;
